# froy_tools

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/froy_tools/: env_var_manager.py
tests/: test_env_var_manager.py
