[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/froy_tools"]

[project]
name = "froy_tools"
version = "0.0.1"
authors = [
  { name="José Froylán Málaga Cardoza", email="malagacj@tcd.ie" },
]
description = "Package to include general purpose python functions, classes, etc..."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/malagacj/froy_tools"
Issues = "https://github.com/malagacj/froy_tools/issues"
